@@ -103,14 +103,21 @@ public abstract class HyperIoTSparkJob implements Job {
      */
     private Map<String, String> getSparkProperties(String appName,
                                                    String sparkJarsProperty) {
-
+        String sparkMasterUrl = "spark://"+SparkManagerUtil.getSparkMasterHostname()+":"+SparkManagerUtil.getSparkMasterPort();
         Map<String, String> sparkProps = new HashMap<>();
         sparkProps.put("spark.jars", sparkJarsProperty);
+        //TODO: enable kerberos auth betwween spark and hbase
+        sparkProps.put("spark.security.credentials.hbase.enabled","false");
+        //TODO: change memory settings based on algorithm and data volumes
+        sparkProps.put("spark.executor.memory", "1g");
+        sparkProps.put("spark.executor.pyspark.memory", "1g");
+        sparkProps.put("spark.driver.memory", "2g");
         sparkProps.put("spark.driver.supervise", String.valueOf(SparkManagerUtil.getSparkDriverSupervise()));
         sparkProps.put("spark.app.name", appName); // This property is mandatory as the others, however if job define its name, the latter will override the former
         sparkProps.put("spark.submit.deployMode", SparkManagerUtil.getSparkSubmitDeployMode());
-        sparkProps.put("spark.master", SparkManagerUtil.getSparkRestApiUrl());
-        sparkProps.put("spark.jars.packages", "org.apache.spark:spark-avro_2.11:2.4.5");    // HyperIoT Spark jobs need avro dependency to read data on which they do computation
+        sparkProps.put("spark.master", sparkMasterUrl);
+        sparkProps.put("spark.jars.packages", "org.apache.spark:spark-avro_2.11:2.4.5,org.apache.hbase:hbase-shaded-client:2.5.3");    // HyperIoT Spark jobs need avro dependency to read data on which they do computation
+        sparkProps.put("spark.driver.extraJavaOptions", "-XX:+IgnoreUnrecognizedVMOptions --add-opens=java.base/java.nio=ALL-UNNAMED --add-opens=java.base/sun.nio.ch=ALL-UNNAMED --add-opens=java.base/java.lang=ALL-UNNAMED --add-opens=java.base/java.lang.invoke=ALL-UNNAMED --add-opens=java.base/jdk.internal.misc=ALL-UNNAMED"); // Required for compatibility between Spark and Java 17
         return sparkProps;
     }
 
